--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "lodash": "^4.17.4",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-redux": "^5.0.6",
     "react-scripts": "1.0.13",
+    "redux": "^3.7.2",
+    "redux-promise": "^0.5.3",
     "youtube-api-search": "0.0.5"
   },
   "scripts": {
@@ -14,5 +17,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "redux-devtools": "^3.4.0"
   }
 }
